# agentickube

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yaml  VERSIONING.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cd.yaml  ci.yaml  version.yaml
chart/agentickube/: Chart.yaml  values-dev.yaml  values.yaml
chart/agentickube/crds/: agents.ai.juliusharing.com.yaml
chart/agentickube/templates/: agent-crs.yaml  clusterrole.yaml  clusterrolebinding.yaml  crd-agent.yaml  crd-orchestrator.yaml  crs.yaml  deployment.yaml  jaeger.yaml  keycloak.yaml  (+7 more)
code/agent/: Dockerfile
code/operator/: Dockerfile  agent_examples_gen.py  crd_gen.py  entrypoint.sh  examples_gen.py  main.py  models.py  reconcile.py
code/orchestrator/: Dockerfile
code/shared/: llm.py  logging.py  otel.py  session.py
deploy/: .gitignore  README.md  agent-crd.yaml  cr.yaml  crd.yaml  example-agent-cron.yaml  example-agent-job.yaml  example-agent.yaml  example-orchestrator-cron.yaml  example-orchestrator-job.yaml  example-orchestrator.yaml  example-rbac.yaml  operator.yaml  orchestrator-crd.yaml
environments/: agent-requirements.txt  all-requirements.txt  dev-requirements.txt  operator-requirements.txt  orchestrator-requirements.txt  shared-requirements.txt
manifests/: .gitignore  agent.yaml  cr.yaml  crd.yaml  ollama.yaml  orchestrator.yaml  otel.yaml  rbac.yaml
pkg/agent/: Dockerfile
pkg/operator/: main.py
src/agent/: Dockerfile
src/operator/: Dockerfile  main.py
tasks/: chart.yaml  dev.yaml  docker.yaml  k8s.yaml
(+67 files in other folders)
